# pepijnkokke.github.io

./: .gitignore  .gitmodules  .travis.yml  Gemfile  Guardfile  LICENSE  Makefile  Rakefile  _config.yml  feed.xml  highlight.sh  index.html  keybase.txt  publications.md  pubs.bib  pubs.html  pubs.md  resume.md  sf.html
_drafts/: applicatives-are-context-free-monads-are-context-sensitive.md  artefacts-archiving-and-reuse.md  linear-types-for-erlang-otp.lagda  linear-types-for-erlang-otp.md  linear-types-for-erlang-otp.sh  neural-networks-explained-with-cube-cats.md  one-lambda-calculus-many-times-2.md  unlit.cabal
_includes/: 2016-03-21-breadboxes-and-distributional-semantics-script.html  2016-03-21-breadboxes-and-distributional-semantics-style.html  agda-extra-script.html  agda-extra-style.html  breadbox-extra-script.html  breadbox-extra-style.html  dalmuti-extra-script.html  dalmuti-extra-style.html  eqn-extra-script.html  eqn-extra-style.html  footer.html  head.html  header.html  pubs-extra-script.html
_layouts/: default.html  post.html
_posts/: 2016-03-01-insertion-sort-in-agda.lagda  2016-03-01-insertion-sort-in-agda.md  2016-03-02-insertion-sort-in-agda.lagda  2016-03-02-insertion-sort-in-agda.markdown  2016-03-09-ab-grammars-in-haskell.markdown  2016-03-09-one-lambda-calculus,-many-times.lagda  2016-03-09-one-lambda-calculus,-many-times.markdown  2016-03-09-side-effects-in-english.markdown  2016-03-09-side-effects-in-english.md  2016-03-09-the-lambda-calculus,-many-times.lagda  2016-03-09-the-lambda-calculus,-many-times.markdown  2016-03-14-constraint-grammar-can-count.markdown  2016-03-16-constraint-grammar-can-count.md  2016-03-17-how-to-hit-the-ground-running-with-uu-parsinglib.md  2016-03-18-one-lambda-calculus,-many-times.md  2016-03-20-one-lambda-calculus-many-times.lagda  2016-03-20-one-lambda-calculus-many-times.md  2016-03-21-breadboxes-and-distributional-semantics.md  2016-03-26-one-lambda-calculus-many-times-2.md  2016-04-01-presidents-scumbags-kings-and-arseholes-and-the-great-dalmuti.md  2016-04-05-presidents-scumbags-kings-and-arseholes-and-the-great-dalmuti.md  2016-10-25-linear-types-for-erlang-otp-1.lagda  2016-10-25-linear-types-for-erlang-otp-1.md  2016-10-25-linear-types-for-erlang-otp-1.sh  2016-10-25-linear-types-for-erlang-otp.lagda  2016-10-25-linear-types-for-erlang-otp.md  2016-10-30-one-lambda-calculus-many-times-2.lagda  2016-10-30-one-lambda-calculus-many-times-2.md  2016-11-01-regular-constraint-grammars.lhs  2016-11-03-zap-is-why-we-cant-have-nice-things.md  2017-05-15-constraint-grammar-is-turing-complete.md  2017-05-15-visl-cg-3-is-the-new-assembler.md  2020-09-12-neural-networks-with-cube-cats.md  (+9 more)
_posts/unlit/: stack.yaml  unlit.cabal  unlit.lhs
misc/TheGreatDalmuti/: TheGreatDalmuti.cabal  stack.yaml
sf/: Maps.md  (+7 more)
(+34 files in other folders)
