name:                unlit
version:             0.1.0.0
synopsis:            Script which unlits Markdown code.
license:             MIT
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           2016 Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable unlit
  hs-source-dirs:      .
  main-is:             unlit.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text >= 1.2.2.1
  default-language:    Haskell2010
